--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "cra-template-pwa-typescript": "1.0.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-scripts": "4.0.1"
+    "react-scripts": "4.0.1",
+    "typescript": "^4.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
