--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -13,6 +13,6 @@ jobs:
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_WEATHERAPPPROJ2021 }}'
-          projectId: ocampossoto-weather
+          projectId: weatherappproj2021
         env:
           FIREBASE_CLI_PREVIEWS: hostingchannels
