--- a/package.json
+++ b/package.json
@@ -3,12 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.2",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.57",
     "@types/node": "^14.14.16",
     "@types/react-dom": "^17.0.0",
+    "@types/react-window": "^1.8.2",
+    "cities.json": "^1.1.5",
     "cra-template-pwa-typescript": "1.0.4",
+    "firebase": "^8.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
+    "react-window": "^1.8.6",
     "typescript": "^4.1.3",
     "web-vitals": "^1.0.1"
   },
