--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "@mui/icons-material": "^5.14.3",
     "@mui/material": "^5.14.5",
     "firebase": "^10.1.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react": "19.0.0",
+    "react-dom": "19.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
